--- a/styles.css
+++ b/styles.css
@@ -35,15 +35,13 @@ h1 {
 /* ----------------------------- */
 
 button {
-  padding: 10px 15px;
-  background-color: #FF0000; /* Red */
-  color: #000000; /* Black */
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
-}
+  border: 5px solid #000000;
+                border-radius: 12px;
+                background: #FF0000;
+                color: #FFFFFF;
+                display:inline-block;
+                padding:20px;
+                opacity:1;
+              }
 
-button:hover {
-  background-color: #990000; /* Darker Red on Hover */
-}
+button:hover {opacity:0.5}
